# aftershock

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  diesel.toml  tailwind.config.js
.helix/: config.toml
crates/aftershock/: Cargo.toml
crates/aftershock/end2end/: global-setup.ts  global-teardown.ts  package-lock.json  package.json  playwright.config.ts  run-tests.ps1  run-tests.sh
crates/aftershock/end2end/helpers/: api.ts  constants.ts  seed.ts
crates/aftershock/end2end/tests/: about.spec.ts  archive.spec.ts  home.spec.ts  navigation.spec.ts  post.spec.ts  smoke.spec.ts
crates/aftershock/src/: consts.rs  lib.rs  main.rs
crates/aftershock/src/app/: mod.rs
crates/aftershock/src/app/components/: content.rs  license.rs  message_card.rs  mod.rs  post.rs  post_meta.rs  post_page.rs  sidebar.rs  tag.rs  time.rs
crates/aftershock/src/app/model/: mod.rs
crates/aftershock/src/app/pages/: about_page.rs  archive_page.rs  error_page.rs  home_page.rs  main_page.rs  mod.rs  post_page.rs
crates/aftershock/src/app/server/: mod.rs
crates/aftershock/src/utils/: datetime.rs  mod.rs
crates/aftershock/style/: main.scss  tailwind.css
crates/aftershock_bridge/: Cargo.toml
crates/aftershock_bridge/src/: lib.rs
crates/aftershock_cli/: Cargo.toml  build.rs  page.md  test.md
crates/aftershock_cli/src/: command.rs  lib.rs  main.rs  parser.rs  requests.rs
crates/aftershock_cli/src/parser/: highlighter.rs  mod.rs
crates/aftershock_storage/: Cargo.toml
crates/aftershock_storage/.cargo/: config.toml
crates/aftershock_storage/src/: error.rs  lib.rs  main.rs  migration.rs  models.rs  pool.rs  schema.rs  utils.rs
crates/aftershock_storage/src/job/: mod.rs
crates/aftershock_storage/src/routes/: api.rs  mod.rs  worker.rs
crates/aftershock_storage/tests/: api_integration_test.rs
migrations/2025-03-20-082839_create_posts/: up.sql
migrations/2025-03-23-043023_alter_posts_adding_nid/: down.sql  up.sql
migrations/2025-03-23-061308_create_tags/: up.sql
migrations/2025-03-23-062843_create_contents_tags/: down.sql  up.sql
migrations/2025-03-29-131624_alter_posts_adding_summary/: down.sql  up.sql
src/: app.rs  main.rs
src/app/components/: left_column.rs  mod.rs
style/: main.scss  reset.scss
