[workspace]
members = ["crates/*"]
resolver = "2"

[profile.release]
strip = true
lto = true

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[workspace.dependencies]
axum = { version = "0.7" }
tokio = { version = "1", features = ["rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
diesel = { version = "2.2.0" }
nid = "3.0.0"
reqwest = { version = "0.12", features = ["json"] }
