[package]
name = "aftershock_cli"
version = "0.2.2"
edition = "2024"

[dependencies]
aftershock_bridge = { path = "../aftershock_bridge" }
clap = { version = "4.5.32", features = ["derive"] }
pulldown-cmark = "0.13.0"
reqwest = { workspace = true, features = ["json", "blocking"] }
serde.workspace = true
serde_json = "1"
toml = "0.9"
two-face = { version = "0.4.3", default-features = false }

[build-dependencies]
clap = { version = "4.5.32", features = ["derive"] }
clap_complete = "4.5.47"
dotenvy = "0.15"

[features]
default = ["regex-onig"]
regex-onig = ["two-face/syntect-default-onig"]
regex-fancy = ["two-face/syntect-default-fancy"]