[package]
name = "aftershock_storage"
version = "0.2.1"
edition = "2024"

[dependencies]
diesel = { workspace = true, features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2"] }
dotenvy = "0.15"
axum = { workspace = true, features = ["json", "macros"] }
tokio.workspace = true
aftershock_bridge = { path = "../aftershock_bridge" }
serde.workspace = true
thiserror.workspace = true
r2d2 = "0.8.10"
nid.workspace = true
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
